@@ -224,6 +224,7 @@
 #hashtag_filter
   +grid(7,23)
   margin-left: 0
+  margin-bottom: 50px
 
   h2
     background: #373d44
@@ -331,7 +332,7 @@
     background: #373D44
     color: #fff
     font-weight: normal
-    font-size: 0.8em
+    font-size: 1em
     margin: 10px 0 0 0
     padding: 15px
 
