@@ -24,6 +24,10 @@
 
 html
   position: relative
+  min-height: 100%
+
+body
+  min-height: 100%
 
 .two-column
   +grid-container
@@ -41,7 +45,10 @@ html
   #main-content
     +grid-width(17)
     margin-right: 0
+    min-height: 100%
 
-  @include sticky-footer(74px, ".content-wrapper", "#root-footer", "#footer")
   #footer
     width: 100%
+    position: absolute
+    left: 0
+    bottom: 0
