@@ -519,8 +519,9 @@ body {
   margin-right: 10px;
   width: 272.174px;
   margin-left: 0;
+  margin-bottom: 50px;
 }
-/* line 228, ../../../app/stylesheets/application.sass */
+/* line 229, ../../../app/stylesheets/application.sass */
 #hashtag_filter h2 {
   background: #373d44;
   border-bottom: 1px solid #f6fbfe;
@@ -535,7 +536,7 @@ body {
   text-shadow: 1px 1px 2px #666666;
   width: 262px;
 }
-/* line 242, ../../../app/stylesheets/application.sass */
+/* line 243, ../../../app/stylesheets/application.sass */
 #hashtag_filter h2 a {
   display: block;
   float: left;
@@ -549,68 +550,68 @@ body {
 #hashtag_filter h2 a:hover {
   text-decoration: underline;
 }
-/* line 251, ../../../app/stylesheets/application.sass */
+/* line 252, ../../../app/stylesheets/application.sass */
 #hashtag_filter .tweets {
   display: block;
   margin: 5px 5px 5px 5px;
 }
 
-/* line 255, ../../../app/stylesheets/application.sass */
+/* line 256, ../../../app/stylesheets/application.sass */
 .modal {
   padding: 10px;
 }
-/* line 259, ../../../app/stylesheets/application.sass */
+/* line 260, ../../../app/stylesheets/application.sass */
 .modal form textarea {
   height: 130px;
   width: 320px;
 }
 
-/* line 264, ../../../app/stylesheets/application.sass */
+/* line 265, ../../../app/stylesheets/application.sass */
 #category_show {
   width: 665px;
 }
-/* line 267, ../../../app/stylesheets/application.sass */
+/* line 268, ../../../app/stylesheets/application.sass */
 #category_show h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
-/* line 271, ../../../app/stylesheets/application.sass */
+/* line 272, ../../../app/stylesheets/application.sass */
 #category_show #twitter_create_list {
   cursor: pointer;
 }
-/* line 274, ../../../app/stylesheets/application.sass */
+/* line 275, ../../../app/stylesheets/application.sass */
 #category_show #twitter_create_list_form {
   display: none;
 }
-/* line 277, ../../../app/stylesheets/application.sass */
+/* line 278, ../../../app/stylesheets/application.sass */
 #category_show .category {
   margin-top: 5px;
   margin-right: 0;
   float: left;
 }
-/* line 282, ../../../app/stylesheets/application.sass */
+/* line 283, ../../../app/stylesheets/application.sass */
 #category_show .category h2 {
   width: 300px;
 }
-/* line 285, ../../../app/stylesheets/application.sass */
+/* line 286, ../../../app/stylesheets/application.sass */
 #category_show .category .tweets {
   display: block;
   margin-top: 5px;
 }
 
-/* line 290, ../../../app/stylesheets/application.sass */
+/* line 291, ../../../app/stylesheets/application.sass */
 #category_chooser {
   background: transparent;
   width: 665px;
 }
-/* line 294, ../../../app/stylesheets/application.sass */
+/* line 295, ../../../app/stylesheets/application.sass */
 #category_chooser h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
   height: 40px;
   font-weight: bold;
 }
-/* line 300, ../../../app/stylesheets/application.sass */
+/* line 301, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable, #category_chooser .action-area {
   background: #bfd9e6;
   font-size: 0.85em;
@@ -618,7 +619,7 @@ body {
   margin-top: 10px;
   padding: 15px;
 }
-/* line 307, ../../../app/stylesheets/application.sass */
+/* line 308, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable span, #category_chooser #droppable span {
   background: #f7fcfe;
   color: #666666;
@@ -636,50 +637,50 @@ body {
   /* CSS3 */
   box-shadow: #9dc2d5 0px 0px 10px;
 }
-/* line 317, ../../../app/stylesheets/application.sass */
+/* line 318, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable span.ui-state-disabled {
   color: #999999;
   background: #eeeeee;
 }
-/* line 321, ../../../app/stylesheets/application.sass */
+/* line 322, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable {
   margin: 0;
 }
-/* line 324, ../../../app/stylesheets/application.sass */
+/* line 325, ../../../app/stylesheets/application.sass */
 #category_chooser .action-area {
   padding: 0;
 }
-/* line 327, ../../../app/stylesheets/application.sass */
+/* line 328, ../../../app/stylesheets/application.sass */
 #category_chooser .action-area #droppable {
   min-height: 30px;
   padding: 15px;
 }
-/* line 330, ../../../app/stylesheets/application.sass */
+/* line 331, ../../../app/stylesheets/application.sass */
 #category_chooser p {
   background: #373d44;
   color: white;
   font-weight: normal;
-  font-size: 0.8em;
+  font-size: 1em;
   margin: 10px 0 0 0;
   padding: 15px;
 }
 
-/* line 338, ../../../app/stylesheets/application.sass */
+/* line 339, ../../../app/stylesheets/application.sass */
 .box {
   width: 665px;
 }
-/* line 341, ../../../app/stylesheets/application.sass */
+/* line 342, ../../../app/stylesheets/application.sass */
 .box h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
   height: 40px;
   font-weight: bold;
 }
-/* line 347, ../../../app/stylesheets/application.sass */
+/* line 348, ../../../app/stylesheets/application.sass */
 .box .content {
   padding: 10px;
 }
-/* line 350, ../../../app/stylesheets/application.sass */
+/* line 351, ../../../app/stylesheets/application.sass */
 .box .content .item {
   background: #f7fcfe;
   padding: 4px;
@@ -689,41 +690,41 @@ body {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
 }
-/* line 357, ../../../app/stylesheets/application.sass */
+/* line 358, ../../../app/stylesheets/application.sass */
 .box .content a.item {
   color: black;
   text-decoration: none;
 }
 
-/* line 363, ../../../app/stylesheets/application.sass */
+/* line 364, ../../../app/stylesheets/application.sass */
 .users_list {
   width: 665px;
 }
-/* line 366, ../../../app/stylesheets/application.sass */
+/* line 367, ../../../app/stylesheets/application.sass */
 .users_list .users {
   display: block;
 }
-/* line 369, ../../../app/stylesheets/application.sass */
+/* line 370, ../../../app/stylesheets/application.sass */
 .users_list .users .tweet {
   width: 282px;
   float: left;
   margin-right: 10px;
 }
-/* line 374, ../../../app/stylesheets/application.sass */
+/* line 375, ../../../app/stylesheets/application.sass */
 .users_list .users .tweet .body {
   min-height: 100px;
 }
-/* line 378, ../../../app/stylesheets/application.sass */
+/* line 379, ../../../app/stylesheets/application.sass */
 .users_list h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
 
-/* line 382, ../../../app/stylesheets/application.sass */
+/* line 383, ../../../app/stylesheets/application.sass */
 .lists_list {
   width: 665px;
 }
-/* line 386, ../../../app/stylesheets/application.sass */
+/* line 387, ../../../app/stylesheets/application.sass */
 .lists_list .lists .list {
   background: #f7fcfe;
   width: 292px;
@@ -731,35 +732,35 @@ body {
   margin-right: 10px;
   min-height: 45px;
 }
-/* line 393, ../../../app/stylesheets/application.sass */
+/* line 394, ../../../app/stylesheets/application.sass */
 .lists_list .lists .list:hover {
   background: white;
 }
-/* line 396, ../../../app/stylesheets/application.sass */
+/* line 397, ../../../app/stylesheets/application.sass */
 .lists_list .lists .list .body {
   padding-left: 10px;
 }
-/* line 399, ../../../app/stylesheets/application.sass */
+/* line 400, ../../../app/stylesheets/application.sass */
 .lists_list .lists .list .body h3 {
   margin-bottom: 0;
 }
-/* line 402, ../../../app/stylesheets/application.sass */
+/* line 403, ../../../app/stylesheets/application.sass */
 .lists_list .lists .list .body .members {
   font-size: 1.2em;
   margin-left: 3px;
 }
-/* line 406, ../../../app/stylesheets/application.sass */
+/* line 407, ../../../app/stylesheets/application.sass */
 .lists_list h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
 
-/* line 410, ../../../app/stylesheets/application.sass */
+/* line 411, ../../../app/stylesheets/application.sass */
 .pagination {
   text-align: center;
 }
 
-/* line 413, ../../../app/stylesheets/application.sass */
+/* line 414, ../../../app/stylesheets/application.sass */
 #create_list_from_category {
   background: #e1f3fd;
   margin: 10px;
@@ -773,30 +774,30 @@ body {
   margin-right: 10px;
   width: 272.174px;
 }
-/* line 420, ../../../app/stylesheets/application.sass */
+/* line 421, ../../../app/stylesheets/application.sass */
 #create_list_from_category p {
   margin: 10px;
   text-align: center;
 }
-/* line 424, ../../../app/stylesheets/application.sass */
+/* line 425, ../../../app/stylesheets/application.sass */
 #create_list_from_category label {
   margin-left: 5px;
   width: 70px;
   display: inline-block;
 }
-/* line 429, ../../../app/stylesheets/application.sass */
+/* line 430, ../../../app/stylesheets/application.sass */
 #create_list_from_category input {
   margin: 3px;
 }
-/* line 432, ../../../app/stylesheets/application.sass */
+/* line 433, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=text] {
   width: 120px;
 }
-/* line 435, ../../../app/stylesheets/application.sass */
+/* line 436, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=submit] {
   margin-left: 83px;
 }
-/* line 438, ../../../app/stylesheets/application.sass */
+/* line 439, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 {
   background: #0094da;
   color: white;
@@ -807,7 +808,7 @@ body {
   -moz-border-radius: 12px;
   -webkit-border-radius: 12px;
 }
-/* line 446, ../../../app/stylesheets/application.sass */
+/* line 447, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 a {
   color: white;
   font-weight: bold;
@@ -818,12 +819,12 @@ body {
   text-decoration: underline;
 }
 
-/* line 455, ../../../app/stylesheets/application.sass */
+/* line 456, ../../../app/stylesheets/application.sass */
 .modal {
   display: none;
 }
 
-/* line 458, ../../../app/stylesheets/application.sass */
+/* line 459, ../../../app/stylesheets/application.sass */
 .modal div.close {
   background-image: url(../../images/close.png);
   position: absolute;
@@ -835,7 +836,7 @@ body {
   z-index: 9999;
 }
 
-/* line 469, ../../../app/stylesheets/application.sass */
+/* line 470, ../../../app/stylesheets/application.sass */
 form .counter {
   position: absolute;
   left: 15px;
@@ -844,21 +845,21 @@ form .counter {
   font-weight: bold;
   color: #666666;
 }
-/* line 477, ../../../app/stylesheets/application.sass */
+/* line 478, ../../../app/stylesheets/application.sass */
 form .warning {
   color: #660000;
 }
-/* line 479, ../../../app/stylesheets/application.sass */
+/* line 480, ../../../app/stylesheets/application.sass */
 form .exceeded {
   color: #ee0000;
 }
-/* line 482, ../../../app/stylesheets/application.sass */
+/* line 483, ../../../app/stylesheets/application.sass */
 form #tweet_submit {
   padding: 5px;
   float: right;
 }
 
-/* line 486, ../../../app/stylesheets/application.sass */
+/* line 487, ../../../app/stylesheets/application.sass */
 .clear {
   clear: both;
 }
